# Ticket-manager

./: README.md
frontend/: index.html  static.json
frontend/pages/: client-details.html  clients.html  create-ticket.html  login.html  ticket-details.html  tickets.html
frontend/scripts/: tickets.js
frontend/src/: App.jsx  main.jsx
frontend/src/pages/: Login.jsx  Tickets.jsx
frontend/styles/: clients.css  login.css  tickets.css
ticket_manager/: .obs.txt  database.db  pyproject.toml  requirements.txt
ticket_manager/alembic/: env.py
ticket_manager/alembic/versions/: 00b1c6dda137_adicionar_cascade_ao_relacionamento_.py  055ff58e8d87_update_do_db_aplicação_de_index_pra_.py  0e1272288fcf_tenho_que_estudar_sqlalchemy.py  222656aa0e7f_mdf.py  2332137b4887_adicionar_cascade_ao_relacionamento_.py  4724571f9bbf_add_managers_table.py  53602843e443_tenho_que_estudar_sqlalchemy.py  b0a32b0c2cf0_ajuste_cadastro_cliente_campos_não_são_.py  b9cb8c950398_não_sei_o_que_isso_vai_fazer.py  f26d35767aa2_initial_migration.py  fe556bfb46e4_mudança_nos_models.py
ticket_manager/tests/: conftest.py  test_auth.py  test_clients.py  test_test.py  test_users.py
ticket_manager/ticket_manager/: app.py  database.py  models.py  schema.py  security.py
ticket_manager/ticket_manager/routers/: auth.py  clients.py  tickets.py  users.py
ticket_manager/ticket_manager/services/: clients_services.py  ticket_services.py  users_services.py
