[tool.poetry]
name = "ticket-manager"
version = "0.1.0"
description = ""
authors = ["ghaluccas <gabsgit@gmail.com>"]
readme = "README.md"
packages = [{ include = "ticket_manager" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.115.2"
sqlalchemy = "2.0.37"
pydantic-settings = "2.7.1"
pwdlib = {extras = ["argon2"], version = "0.2.1"}
python-multipart = "0.0.20"
pyjwt = "2.10.1"
tzdata = "2025.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.9.3"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
